force-app/main/default/objects/Sales_Order__c/fields/Bill_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to Address</label>
    <referenceTo>Ship_Bill_Address__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>