force-app/main/default/objects/Sales_Order__c/fields/Delivery_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Instruction__c</fullName>
    <label>Delivery Instruction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Fast Track</fullName>
            </value>
            <value>
                <fullName>Self Pick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>