force-app/main/default/objects/Sales_Order__c/fields/Ship_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to Address</label>
    <referenceTo>Ship_Bill_Address__c</referenceTo>
    <relationshipLabel>Sales Orders (Ship to Address)</relationshipLabel>
    <relationshipName>Sales_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>