force-app/main/default/objects/Sales_Order__c/fields/Ship_to_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Postcode__c</fullName>
    <label>Ship to Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>