force-app/main/default/objects/Sales_Order__c/fields/Shipping_Mark__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Mark__c</fullName>
    <label>Shipping Mark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>