force-app/main/default/objects/Sales_Order__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>Template selected for generating pdf</description>
    <label>Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>