force-app/main/default/objects/Sales_Order__c/fields/Transportation_Details__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Details__c</fullName>
    <label>Transportation Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>